css/components/_homepage.scss
.home {
    position: relative;
    display: flex;
    flex-wrap: wrap;
    gap: 10%;
    min-height: 100vh;
    align-items: center;
    justify-content: center;
    padding-left: 10%;
    padding-right: 10%;

    &__content {
        flex: 1 1 40rem;
        padding-top: 1rem;
        z-index: 1;
    }

    #particles-js {
        position: absolute;
        top: 0;
        left: 0;
        height: 100%;
        width: 100%;
    }

    .content {
        flex: 1 1 40rem;
        padding-top: 1rem;
        z-index: 1;

        h1 {
            font-size: 5rem;
            font-weight: 800;
            color: $blue-600;
        }

        p {
            font-size: 2.5rem;
            color: black;
            font-weight: 600;
            padding: 1rem 0;

            span {
                font-size: 2.5rem;
                color: $red-100;
                font-weight: 600;
                padding: 1rem 0;
            }
        }

        .btn {
            margin-top: 1rem;
            position: absolute;
            line-height: 0;
            padding: 1.6rem 3rem;
            border-radius: 4em;
            transition: 0.5s;
            color: $white-100;
            background: $blue-200;
            box-shadow: 0px 5px 18px rgba($blue-300, 0.6);
            font-family: "Nunito", sans-serif;

            span {
                font-weight: 700;
                font-size: 1.7rem;
                letter-spacing: 0.1rem;
            }

            &:hover {
                background: $blue-400;

                i {
                    transform: translateX(5px);
                }
            }

            i {
                margin-left: 0.3rem;
                font-size: 1.5rem;
                transition: 0.3s;
            }
        }
    }

    .image {
        flex: 1 1 40rem;
        z-index: 1;

        img {
            width: 75%;
            border-radius: 50%;
            box-shadow: 0 2px 8px rgba($black-100, 0.3);
            cursor: pointer;

            &:hover {
                box-shadow: 0 5px 15px rgba($black-100, 0.5);
            }
        }
    }
}

